# ovpn-gui

./: CMakeLists.txt  UI.ora  UI.ora~  todo.txt
src/: CMakeLists.txt  action_panel.cpp  action_panel.hpp  available_connection.cpp  available_connection.hpp  connection_handler.cpp  connection_handler.hpp  connection_panel.cpp  connection_panel.hpp  connection_widget.cpp  connection_widget.hpp  constants.hpp  helpers.cpp  helpers.hpp  log_panel.cpp  log_panel.hpp  main.cpp  main_window.cpp  main_window.hpp
